# open-keynote-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.local.json
doc/: TECHNICAL.md
openspec/: project.md
openspec/changes/001-add-cli-file-organizer/: design.md  proposal.md  tasks.md
openspec/changes/002-rename-to-open-keynote-agent/: design.md  proposal.md  tasks.md
openspec/changes/003-rename-package-and-cli/: design.md  proposal.md  tasks.md
openspec/changes/004-add-interactive-agent-runtime/: design.md  proposal.md  tasks.md
openspec/changes/005-add-keynote-applescript-adapter/: design.md  proposal.md  tasks.md
openspec/changes/006-add-theme-and-layout-discovery/: design.md  proposal.md  tasks.md
openspec/changes/007-add-keynote-object-tools/: design.md  proposal.md  tasks.md
openspec/changes/008-add-deck-spec-planner/: design.md  proposal.md  tasks.md
openspec/changes/009-add-storybook-renderer/: design.md  proposal.md  tasks.md
openspec/changes/010-add-image-asset-generation/: design.md  proposal.md  tasks.md
openspec/changes/011-add-image-prompt-director/: design.md  proposal.md  tasks.md
openspec/changes/012-add-image-assets-to-storybook-renderer/: design.md  proposal.md  tasks.md
openspec/changes/013-add-readable-storybook-text-overlays/: design.md  proposal.md  tasks.md
src/open_keynote_agent/: cli.py  filesystem.py  organizer.py
src/open_mac_agent/: __init__.py  cli.py  filesystem.py  organizer.py
tests/: test_cli.py  test_deck.py  test_filesystem.py  test_images.py  test_keynote_tools.py  test_llm.py  test_llm_provider_adapters.py  test_llm_providers.py  test_organizer.py  test_session_runtime.py  test_storybook_renderer.py
(+67 files in other folders)
