[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-mac-agent"
version = "0.1.0"
description = "A macOS-first AI agent CLI for local file organization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Open Mac Agent" }]
keywords = ["macOS", "agent", "CLI", "AI", "file organizer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "typer>=0.9.0",
  "rich>=14.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.30.0"]
openai = ["openai>=0.27.0"]
gemini = ["google-genai>=0.1.0"]
dev = ["pytest>=9.0.0", "ruff>=0.15.0"]

[project.scripts]
oma = "open_mac_agent.cli:app"
